# goit-pythonweb-hw-012

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
src/api/: auth.py  contacts.py  users.py
src/conf/: config.py
src/database/: db.py
src/dependencies/: db.py  redis_cache.py
src/migrations/: env.py
src/migrations/versions/: c3c27a0e329d_add_role_field_to_user_model.py
src/models/: contacts.py  models.py  users.py
src/repositories/: contacts.py  users.py
src/schemas/: contact.py  user.py
src/services/: auth.py  contacts.py  email.py  upload_file.py  users.py
src/services/templates/: password_reset.html
tests/: conftest.py  test_auth_api_integration.py  test_contacts_api_integration.py  test_contacts_repository_unit.py  test_user_api_integration.py  test_users_repository_unit.py
